<resources>
    <string name="app_name">Booking</string>
    <string name="all">ALL</string>
    <string name="action">Action</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="comedy">Comedy</string>
    <string name="drama">Drama</string>
    <string name="time">16:00 (2h16mn)</string>
    <string name="saw_x">SAW X</string>
    <string name="joker">JOKER</string>
    <string name="archer">ARCHER</string>
    <string name="elemental">ELEMENTAL</string>
    <string name="oppenheimer">OPPENHEIMER</string>
    <string name="lordofwar">LORD OF WAR</string>
    <string name="beauty">BEAUTY</string>
    <string name="grinch">GRINCH</string>
    <string name="playerone">PLAYER ONE</string>
    <string name="kingkong">KING KONG</string>
    <string name="ching">CHINOY</string>
    <string name="barbie">BARBIE</string>
    <string name="checkout">CHECKOUT</string>
    <string name="us_2d">US , 2D</string>
    <string name="fri_03_16_00">Fri, 03 | 16:00</string>
    <string name="phnom_penh_cambodia">Phnom Penh, Cambodia</string>
    <string name="_2_ticket_s">4 Ticket(s)</string>
    <string name="hall_screen_3">HAll SCREEN 3</string>
    <string name="booking_id_kw67yh">Booking ID: KW67YH</string>
    <string name="seats_f5_f6">seats (A2,B2,C3,D3)</string>
    <string name="a_confirmation_is_call_by_sms_email_within_15mn_of_booking">A confirmation is call by SMS/email within 15mn of booking.</string>
    <string name="tap_to_see_more">Tap to see more</string>

    <string name="duration">Duration : (2h16mn)</string>
    <string name="description">A sick and desperate John travels to Mexico for a risky and experimental medical procedure in hopes of a miracle cure for his cancer only to discover the entire operation is a scam.</string>
    <string name="star">Tobin Bell, Shawneee Smith.</string>
    <string name="trailers"> -> <u>See Trailer</u></string>
    <string name="more"><u>More Like This</u></string>
    <string name="loading">Loading…</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Order</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todo">todo</string>
    <string name="movie">Movie</string>
    <string name="city">Cities</string>
    <string name="search">Search</string>
    <string name="book_tickets">Book Tickets</string>
    <string name="enter_the_user_name">Enter the Username</string>
    <string name="enter_the_email_id">Enter the email id</string>
    <string name="enter_the_country">Enter the country</string>
    <string name="add">+</string>
    <string name="enter_the_phone_number">Enter the phone number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="enter_the_confirm_password">Enter the confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="space" />
    <string name="sign_in">Sign In</string>
    <string name="register_page">Register Page</string>
    <string name="login_page">Login Page</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="logout">Logout</string>
    <string name="forgot_password_page">Forgot Password Page</string>
    <string name="send_email">Send Email</string>
    <string name="select_country">Select Country</string>
    <string name="_91">+91</string>
    <string name="gender1">Gender :-</string>
    <string name="mobile_no1">Mobile No. :-</string>
    <string name="country1">Country :-</string>
    <string name="email_id1">Email Id :-</string>
    <string name="username1">UserName :-</string>
    <string name="book">Book Now</string>
</resources>